--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ font-size: 15px;
 box-shadow: 60px black;
 
 }
-
+#audio{
+    display: none;
+}
 
     </style>
 </head>
@@ -62,5 +64,7 @@ box-shadow: 60px black;
 
 
     </div>
+   <audio src="Kbc.mp3" controls preload="auto" autoplay id="audio"></audio>
+    
 </body>
 </html>
