--- a/no.html
+++ b/no.html
@@ -25,10 +25,16 @@ font-weight: 500;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 background-size: 40px;
 }
+        #audio{
+    display: none;
+}
+  
     </style>
 </head>
 <body>
     <div id="container"></div>
 <div id="second">BACH GYA AAJ TOH</div>
+     <audio src="no.mp3" controls preload="auto" autoplay id="audio"></audio>
+</body>
 </body>
 </html>
