--- a/yes.html
+++ b/yes.html
@@ -25,10 +25,15 @@ font-weight: 500;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 background-size: 40px;
 }
+        #audio{
+            display:none;
+        }
+        
     </style>
 </head>
 <body>
     <div id="container"></div>
 <div id="second">AAJA BHID LE</div>
+    <audio src="Yes.mp3" controls preload="auto" autoplay id="audio"></audio>
 </body>
 </html>
